--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 
   </head>
   <body>
+    <div id="app" class="container">
+      <!-- Header -->
+      <!-- Menu Header -->
+      <!-- Hero -->
+
+      <!-- Main -->
+      <!-- Section1: Foodie Journal -->
+      <!-- Section2: Popular Recipes -->
+      <!-- Section3: Culinary Collection -->
+      <!-- Section4: Farm to Table -->
+      <!-- Section4.2: split dx/sx -->
+      <!-- Section5: Subscribe & Receive -->
+      <!-- Section6: Foto -->
+
+      <!-- Footer -->
+      <!-- Copyright -->
+
+    </div>
+
 
 
 
@@ -19,7 +38,7 @@
 
 
     <!-- JS -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-  <script src="./js/main.js" charset="utf-8"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+  <script src="./js/main.js" charset="utf-8"></script> -->
   </body>
 </html>
