--- a/index.html
+++ b/index.html
@@ -11,8 +11,32 @@
 
   </head>
   <body>
-    <div id="app" class="container">
+    <div id="app" class="container d-flex ">
       <!-- Header -->
+      <div class="header-overall d-flex">
+        <section class="list-overall ">
+          <ul class="d-flex">
+            <li><a href="#">Download App <span>iOS</span></a></li>
+            <li><a href="#">Advertaise with us</a></li>
+          </ul>
+
+        </section>
+        <section class="icons-overall">
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </section>
+
+      </div>
       <!-- Menu Header -->
       <!-- Hero -->
 
