--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
         </nav>
       </header>
 
-
       <!-- Hero -->
+      <div class="hero">
+        <span class="label">Today's pick</span>
+        <section class="text-hero">
+          <h1 class="title">
+            Food Corner: Top Japanese Restaurants for Sushi
+          </h1>
+          <p>March 25, 2019</p>
+        </section>
+
+
+      </div>
 
       <!-- Main -->
       <!-- Section1: Foodie Journal -->
