Section2: work in progress

--- a/index.html
+++ b/index.html
@@ -103,7 +103,32 @@
             <h3> Popular Recipes</h3>
             <p> Aliquam erat volutpat. Ut quis ligula a magna blandit finibus.
               Suspendisse maximus lacus non nunc lacinia lobortis.
-            </p> 
+            </p>
+          </div>
+          <div class="recipePosts d-flex">
+            <div class="recipePost d-flex">
+              <img src="./Images_Food/Yogurt-Nan-800x527.jpg" alt="">
+              <div class="recipeHeader">
+                <h3 class="title">Lunch Favourite with Salad, Naan And Beans</h3>
+                <p>Bakery, Featured, Healthy, Latest Recipes, Staff Picks</p>
+              </div>
+              <div class="recipeBody">
+                  <p>Suspendisse at semper odio. Nam fringilla scelerisque tincidunt.
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec tincidunt posuere ornare. Phasellus placerat odio non feugiat sollicitudin. Integer vitae elementum ex.
+                    Sed porttitor, diam eget convallis volutpat, arcu tellus facilisis nulla, id dignissim orci leo id
+                  </p>
+                  <button type="button" name="button" class="btn">
+                    LEARN MORE
+                  </button>
+              </div>
+
+            </div>
+            <div class="slide-recipePosts">
+              <img src="" alt="">
+
+            </div>
+
           </div>
 
         </section>
