Section3: Culinary Collection

--- a/index.html
+++ b/index.html
@@ -128,17 +128,32 @@
                 <div v-for="image in imagesFromBlog" class="grid-item">
                   <img :src="image" alt="">
                 </div>
-
-
               </div>
             </div>
-
           </div>
-
         </section>
+
+        <!-- Section3: Culinary Collection -->
+        <section class="collection d-flex">
+          <div class="box-text">
+            <h3> CULINARY COLLECTION</h3>
+            <p> Aliquam erat volutpat. Ut quis ligula a magna blandit finibus.
+                Suspendisse maximus lacus non nunc lacinia lobortis.
+            </p>
+          </div>
+          <div class="wrap-collection">
+            <div class="grid-container-collection">
+              <div  v-for="collection in collections"
+                    class="grid-item-collection">
+                  <img :src="collection.path" alt="">
+                  <button type="button" name="button" class="label-btn">
+                      {{collection.label}}
+                  </button>
+              </div>
+        </section>
+
       </main>
 
-      <!-- Section3: Culinary Collection -->
       <!-- Section4: Farm to Table -->
       <!-- Section4.2: split dx/sx -->
       <!-- Section5: Subscribe & Receive -->
