--- a/index.html
+++ b/index.html
@@ -150,11 +150,33 @@
                       {{collection.label}}
                   </button>
               </div>
+            </div>
+          </div>
         </section>
+
+        <!-- Section4: Farm to Table -->
+        <section class="farm-table-container d-flex">
+          <div class="farm-table d-flex">
+            <div class="box-text ">
+              <h3> Farm to table</h3>
+              <p> Aliquam erat volutpat. Ut quis ligula a magna blandit finibus.
+                  Suspendisse maximus lacus non nunc lacinia lobortis.
+              </p>
+            </div>
+            <div class="cta d-flex">
+              <button type="button" name="button" class="btn">
+                Read our blog
+                <i class="fas fa-book-reader"></i>
+               </button>
+            </div>
+          </div>
+
+
+        </section>
+
 
       </main>
 
-      <!-- Section4: Farm to Table -->
       <!-- Section4.2: split dx/sx -->
       <!-- Section5: Subscribe & Receive -->
       <!-- Section6: Foto -->
