Section4: parte II

--- a/index.html
+++ b/index.html
@@ -170,14 +170,46 @@
                </button>
             </div>
           </div>
+        </section>
+        <!-- Section4.2: split dx/sx -->
+        <section class="farm-tablePosts">
+          <div class="tablePosts d-flex">
+            <div class="tablePost-sx d-flex">
+              <img src="./Images_Food/single-post-img3-800x527.jpg" alt="">
+              <div class="recipeHeader">
+                <h3 class="title">Lunch Favourite with Salad, Naan And Beans</h3>
+                <p>Bakery, Featured, Healthy, Latest Recipes, Staff Picks</p>
+              </div>
+              <div class="recipeBody">
+                  <p>Suspendisse at semper odio. Nam fringilla scelerisque tincidunt.
+                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Donec tincidunt posuere ornare. Phasellus placerat odio non feugiat sollicitudin. Integer vitae elementum ex.
+                    Sed porttitor, diam eget convallis volutpat, arcu tellus facilisis nulla, id dignissim orci leo id
+                  </p>
+                  <button type="button" name="button" class="btn">
+                    Read More >
+                  </button>
+                  <i class="far fa-comments"></i>
+              </div>
+            </div>
+            <div class="farm-tablePost-dx">
+              <div class="tablePost-dx">
+                <img src="./Images_Food/ad-bg.jpg" alt="">
+
+              </div>
+              <div class="tablePost-guide">
+                <img src="./Images_Food/singapore-featured-image-800x527.jpg" alt="">
+
+              </div>
 
 
+            </div>
+          </div>
         </section>
 
 
       </main>
 
-      <!-- Section4.2: split dx/sx -->
       <!-- Section5: Subscribe & Receive -->
       <!-- Section6: Foto -->
 
