Section4: work in progress

--- a/index.html
+++ b/index.html
@@ -194,11 +194,16 @@
             </div>
             <div class="farm-tablePost-dx">
               <div class="tablePost-dx">
-                <img src="./Images_Food/ad-bg.jpg" alt="">
-
+                <h3 class="tablePost-text-center">View our latest recipes</h3>
               </div>
               <div class="tablePost-guide">
-                <img src="./Images_Food/singapore-featured-image-800x527.jpg" alt="">
+                <div class="tablePost-guide-title">
+                  <span>City guide: Singapore</span>
+                </div>
+                <button type="button" name="button" class="btn">
+                  <i class="fas fa-globe-americas"></i>
+                  View all city guides
+                </button>
 
               </div>
 
