--- a/index.html
+++ b/index.html
@@ -305,19 +305,10 @@
                       <div class="theme-icons">
                         <img class=""src="./Images_Food/image (2).svg">
                         <img class=""src="./Images_Food/image (3).svg">
-        
                       </div>
-
-
                     </div>
                     <img class="d-flex tweet"src="./Images_Food/image (1).svg" alt="">
                   </div>
-
-
-
-
-
-
                 </div>
 
 
@@ -326,11 +317,32 @@
             </div>
           </div>
         </section>
+        <!-- Section5: Subscribe & Receive -->
+        <section class="subscrive-hero">
+          <!-- <img src="./Images_Food/subscribe-sec-bg.png" alt=""> -->
+          <div class="subscrive-hero-box">
+            <div class="subscrive-hero-text">
+              <h2 class="title">Subscribe <span>&</span> Receive A Free eBook</h2>
+              <p> Aliquam erat volutpat. Ut quis ligula a magna blandit finibus.
+                Suspendisse maximus lacus non nunc lacinia lobortis.
+              </p>
+            </div>
+            <div class="subscrive-hero-input">
+              <input type="text" name=""
+                 placeholder="Insert your email...">
+              <button type="button" name="button" class="btn">
+                subscribe
+              </button>
+            </div>
+            <span class="small">Cras porttitor pellentesque sem eu pretium.</span>
+          </div>
 
+
+        </section>
 
       </main>
 
-      <!-- Section5: Subscribe & Receive -->
+
       <!-- Section6: Foto -->
 
       <!-- Footer -->
@@ -346,7 +358,7 @@
 
 
     <!-- JS -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-  <script src="./js/main.js" charset="utf-8"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+  <script src="./js/main.js" charset="utf-8"></script> -->
   </body>
 </html>
