--- a/index.html
+++ b/index.html
@@ -403,6 +403,9 @@
             <img src="./Images_Food/download-android-200x66.png" alt="">
             <img src="./Images_Food/download-app-store-200x66.png" alt="">
           </div>
+        </div>
+        <div class="footer-copyright">
+          <p>© Copyright 2012 - 2020 | Avada Theme by ThemeFusion | All Rights Reserved | Powered by WordPress</p>
 
         </div>
 
