--- a/index.html
+++ b/index.html
@@ -336,9 +336,26 @@
             </div>
             <span class="small">Cras porttitor pellentesque sem eu pretium.</span>
           </div>
-          <!-- Section6: Foto -->
+        </section>
 
+        <!-- Section6: Foto -->
+        <section class="slider-photos">
 
+            <div class="slider-photos-container d-flex">
+              <div class="slider-photo">
+                <img src="./Images_Food/Yogurt-Nan-600x395.jpg" alt="">
+              </div>
+              <div class="slider-photo">
+                <img src="./Images_Food/Mixed-fruits-600x395.jpg" alt="">
+              </div>
+              <div class="slider-photo">
+                <img src="./Images_Food/r-rachel-park-366508-unsplash-min-600x395.jpg" alt="">
+              </div>
+              <div class="slider-photo">
+                <img src="./Images_Food/r-michelle-tsang-500721-unsplash-min-600x395.jpg" alt="">
+              </div>
+
+            </div>
 
         </section>
 
@@ -366,9 +383,9 @@
           </div>
           <div class="footer-nav">
             <ul class="foo-nav">
-              <li v-for="mainNav_item in mainNav" class="">
+              <li v-for="navFooter_item in navFooter" class="">
                 <a href="#">
-                  {{mainNav_item}}
+                  {{navFooter_item}}
                 </a>
               </li>
             </ul>
