--- a/index.html
+++ b/index.html
@@ -70,7 +70,36 @@
       <main class="">
 
         <!-- Section1: Foodie Journal -->
-        <div class="foodie-father d-flex">
+        <section class="foodie-journal">
+
+          <div class="foodie-journal-container">
+              <h3>Foodie Journal</h3>
+            <div class="foodie-blogPost">
+              <div class="blogPost d-flex">
+                <ul class="d-flex">
+                  <li v-for="lastBlogPost in lastBlogPosts">
+                    <a href="#">
+                      <div class="postImg container-overlay">
+                        <img :src="lastBlogPost.path" class="image-overlay" alt="">
+                        <div class="overlay">
+                          <i class="fas fa-link"></i>
+                          <div class="text-overlay">
+                            <h4 class="title-overlay"> {{lastBlogPost.title}}</h4>
+                          </div>
+                        </div>
+                      </div>
+                      <h4 class="title"> {{lastBlogPost.title}}</h4>
+                      <p> By {{lastBlogPost.author}} | {{lastBlogPost.data}}</p>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+
+        </section>
+        <!-- <div class="foodie-father d-flex">
           <section class="foodie d-flex">
             <h3>Foodie Journal</h3>
 
@@ -94,7 +123,7 @@
               </ul>
             </div>
           </section>
-        </div>
+        </div> -->
 
 
         <!-- Section2: Popular Recipes -->
@@ -106,8 +135,15 @@
             </p>
           </div>
           <div class="recipePosts d-flex">
-            <div class="recipePost d-flex">
-              <img src="./Images_Food/Yogurt-Nan-800x527.jpg" alt="">
+            <div class="recipePost d-flex container-overlay">
+              
+              <img src="./Images_Food/Yogurt-Nan-800x527.jpg" class="image-overlay"alt="">
+              <div class="overlay">
+                <i class="fas fa-link"></i>
+                <div class="text-overlay">
+                  <h4 class="title-overlay"> Lunch Favourite with Salad, Naan And Beans</h4>
+                </div>
+              </div>
               <div class="recipeHeader">
                 <h3 class="title">Lunch Favourite with Salad, Naan And Beans</h3>
                 <p>Bakery, Featured, Healthy, Latest Recipes, Staff Picks</p>
@@ -421,18 +457,11 @@
             <img src="./Images_Food/download-app-store-200x66.png" alt="">
           </div>
         </div>
+        <!-- Copyright -->
         <div class="footer-copyright">
           <p>© Copyright 2012 - 2020 | Avada Theme by ThemeFusion | All Rights Reserved | Powered by WordPress</p>
-
         </div>
-
-
       </footer>
-
-
-
-      <!-- Copyright -->
-
     </div>
 
 
